--- a/compose.yml
+++ b/compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   statuspage:
     image: d01dataunit.azurecr.io/watchdog:001
-    restart: on-failure
+    restart: unless-stopped
     environment:
       - DB_SERVER=sql.internal.d01.cloud
       - DB_USERNAME=auto
